--- a/konditionen.css
+++ b/konditionen.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Maven+Pro:wght@400;500;700&family=UnifrakturMaguntia&display=swap');
 
 * {
@@ -20,12 +21,79 @@
     
     --transition-1: 0.25s ease;
     --transition-2: 0.5s ease;
+
+
+
+    --rich-black-fogra-29: hsl(210, 26%, 7%);
+--champagne-pink_20: hsla(23, 61%, 86%, 0.2);
+--independence_30: hsla(245, 17%, 29%, 0.3);
+--gray-x-11-gray: hsl(0, 0%, 73%);
+--champagne-pink: hsl(23, 61%, 86%);
+--spanish-gray: hsl(0, 0%, 60%);
+--sonic-silver: hsl(0, 0%, 47%);
+--deep-saffron: hsl(32, 100%, 59%);
+--dark-orange: hsl(28, 100%, 58%);
+--desert-sand: hsl(23, 49%, 82%);
+--isabelline: hsl(38, 44%, 96%);
+--gainsboro: hsl(0, 0%, 87%);
+--tangerine: hsl(31, 84%, 50%);
+--cinnabar: hsl(3, 90%, 55%);
+--black_95: hsla(0, 0%, 0%, 0.95);
+--cultured: hsl(0, 0%, 93%);
+--white: hsl(0, 0%, 100%);
+--black: hsl(0, 0%, 0%);
+--onyx: hsl(0, 0%, 27%);
+
+
+--ff-shadows-into-light: 'Shadows Into Light', cursive;
+--ff-roboto: 'Roboto', sans-serif;
+--ff-rubik: 'Rubik', sans-serif;
+
+--fs-1: 3.2rem;
+--fs-2: 2.2rem;
+--fs-3: 1.8rem;
+--fs-4: 1.4rem;
+--fs-5: 1.2rem;
+
+--fw-500: 500;
+--fw-600: 600;
+--fw-700: 700;
+
+
+
+--section-padding: 60px;
+
+
+--shadow-1: 0 1px 4px hsla(0, 0%, 0%, 0.2);
+--shadow-2: 0 1px 2px hsla(0, 0%, 0%, 0.2);
+
+
+
+--transition-1: 0.25s ease;
+--transition-2: 0.5s ease;
+
+
+
+--clip-path-1: polygon(0 40%, 100% 0%, 100% 100%, 0 100%);
+--clip-path-2: polygon(0 0%, 100% 0%, 100% 100%, 0 100%);
+
   }
   
 
 
 body {
     background-color:#f3f3f3 ;
+}
+
+
+
+.warning {
+  background-color: #ffcc00;
+  color: #333;
+  padding: 10px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 html::-webkit-scrollbar {
@@ -60,7 +128,8 @@ header {
    .logo { 
        font-family: 'Yeseva One', cursive;
       font-size: 64px;
-       color: white;   
+       color: white; 
+       margin-left: -4.5rem;  
    }
    
    
@@ -79,7 +148,7 @@ header {
    }
    
    .navbar a {
-       font-size: 1.6rem;
+       font-size: 1.2rem;
        padding: 20px 40px;
        color: white;
        font-weight: 700;
@@ -100,6 +169,11 @@ header {
    .navbar a:hover::after {
        width: 100%;
    }
+
+   .buchen {
+    visibility: hidden;
+   }
+
    
    #menu-icon {
        font-size: 24px;
@@ -162,12 +236,367 @@ header {
 
 main {
     width: 100%;
-    max-width: 2150px;
+    max-width: 2250px;
     padding: 0 1em;
     padding-top: 2em;
     margin-bottom: 3rem;
-    margin-left: 13rem;
+    margin-left: 7rem;
     font-size: 30px;
+}
+
+h1 {
+    font-size: 40px;
+    text-align: center;
+    padding-bottom: 1em;
+}
+
+main p {
+    font-family: 'Rubik', sans-serif;
+color: hsl(210, 26%, 7%);
+font-size: 20px;
+}
+
+.email a, .website a {
+    color: black !important;
+    text-decoration: underline !important;
+}
+
+
+table {
+    line-height: 1.2;
+    padding-top: 1em;
+    font-size: 24px;
+}
+
+.single-line {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    overflow: auto;
+}
+
+.single-line p {
+    white-space: nowrap;
+}
+
+
+.kosten {
+    padding-bottom: 1em;
+}
+
+.fixed {
+    display: inline-block;
+    width: 350px; /* adjust this value as needed */
+    text-align: left;
+}
+
+
+.title {
+    padding-right: 5em;
+}
+
+.title2 {
+    padding-right: 3em;
+}
+
+.title3 {
+    padding-right: 6em;
+}
+
+.title4 {
+    padding-right: 4em;
+}
+
+.line {
+    border: none;
+    border-top: 1px solid black; /* you can change the color and the thickness of the line */
+    width: 50vw;
+}
+
+
+  .table-line {
+    flex-grow: 1;
+    border-bottom: 1px solid black;
+    width: 100%;
+  }
+  
+  .liner {
+    white-space: nowrap;
+}
+
+
+
+  .underlineCell {
+    display: flex;
+    justify-content: space-between;
+    width: 50vw;
+  }
+
+  .underlineLine {
+    flex-grow: 1;
+    border-bottom: 1px solid black;
+    align-self: center; /* to align the line with the middle of the text */
+    margin-left: 10px;
+    width: 100%; /* space between the text and the line */
+  }
+
+  .nowrap {
+    white-space: nowrap;
+  }
+  
+
+  .tank-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 84%;
+}
+  
+.ja-space {
+    padding-right: 0.5em;
+}
+.tank {
+    padding: 0 2rem; /* adjust padding as needed */
+    padding-bottom: 6em;
+}
+  
+.tank::after {
+    content: "";
+    position: absolute;
+    width: 80%; /* adjust width as needed */
+    height: 1px;  
+    background: black; 
+    top: 25%;  
+    left: 10%; /* adjust left position as needed */
+}
+  
+.tank-container::before,
+.tank-container::after,
+.middle-line::before {
+    content: "";
+    position: absolute;
+    width: 1px;
+    background: black;
+    height: 170px; /* use percentage for responsive design */
+    top: 25%; /* adjust top position as needed */
+}
+  
+.tank-container::before {
+    left: 10%; /* use percentage for responsive design */
+}
+  
+.tank-container::after {
+    right: 10%; /* use percentage for responsive design */
+}
+
+  
+.middle-line::before {
+    left: 50%; /* place the middle line in the center */
+}
+
+  
+  
+
+
+  .selection {
+    display: flex;          /* Use flexbox to arrange child elements */
+    justify-content: space-around;   /* Distribute the available space evenly */
+    padding: 2em 0;         /* Adjust as needed */
+    width: 100%;                      /* Reduce the width to ensure content doesn't overflow */
+    flex-wrap: nowrap;
+  }
+
+  .selection b {
+    margin: 0 3%; 
+    padding: 0 2%;             /* Add padding */
+    text-align: center; 
+    font-size: calc(1em + 0.5vw);
+  }
+
+
+.fuel {
+    margin: auto;
+    padding-top: 1em;
+    font-size: 16px;
+    line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+}
+
+
+
+
+
+.fuels {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%; /* Full width to ensure alignment is towards the start of the parent container */
+    margin: auto;
+    padding-top: 1em;
+    font-size: 16px;
+    line-height: 1.5;
+    justify-content: center;
+    text-align: center;
+}
+
+.fuelss {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    width: 100%; /* Full width to ensure alignment is towards the start of the parent container */
+    margin: auto;
+    padding-top: 1em;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: left;
+    flex: 1;
+}
+
+.pace {
+    display: inline;
+}
+
+.pace-para {
+    display: flex;           
+    flex-direction: column;  
+    align-items: flex-start; 
+}
+
+.spacing {
+    padding-top: 1em;
+}
+
+
+.abfahrt, .abfahrts {
+    padding-bottom: 2em;
+}
+
+.answers {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    flex-wrap: wrap;
+    
+}
+
+.answers-table {
+    width: 30%;
+}
+
+.mietbeginn,
+.abfahrt {
+    align-self: flex-start;  /* This will align these elements to the start */
+    text-align: left; 
+}
+
+.mietbeginns {
+    padding-bottom: 1em;
+}
+
+b {
+    padding-right: 4em;
+}
+
+.mietbeginn,
+.abfahrt,
+.tank,
+.selection,
+.signatures,
+.line {
+    margin-bottom: 20px;
+    align-self: flex-start;  /* This will align these elements to the start */
+    text-align: left;  
+}
+
+.signatures {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-bottom: 2em;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.signatures span::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background: black;
+    margin-bottom: 5px; 
+}
+.signaturess {
+    justify-self: center;
+    text-align: right;
+    flex: 1;
+    margin-top: 2.5rem;
+}
+
+.signaturess span::before {
+    content: "";
+    display: block;
+    width: 40%;
+    height: 1px;
+    background: black;
+    margin-bottom: 5px; 
+    margin-left: auto;
+}
+
+
+h2 {
+    padding-bottom: 2em;
+}
+
+
+.linewrapper {
+    width: 100%; /* adjust as needed */
+    margin: 0 auto;
+}
+.responsive-line {
+    border: 0;
+    height: 1px;
+    margin: 10px 0; /* adjust as needed */
+    width: 100%; /* this makes it responsive */
+    background-color: black;
+    margin-bottom: 2rem;
+}
+
+.para {
+    width: 100%;
+}
+
+.table-for {
+    margin-left: 0;
+    align-self: flex-start;
+}
+
+.para-last {
+    align-self: flex-start;
+    padding-bottom: 4em;
+}
+
+.para-last p {
+    text-align: left;
+    white-space: nowrap;
+}
+
+.space {
+    padding-bottom: 1em;
+    text-align: left;
+}
+
+.space-big {
+    padding-bottom: 5em;
+    text-align: left;
 }
 
 .container {
@@ -285,55 +714,50 @@ main {
 }
 
 
-@media(max-width: 1690px) {
+@media(max-width: 1920px) {
     main {
         width: 100%;
-        max-width: 1400px;
+        max-width: 1800px;
         padding-top: 1em;
-        margin-left: 4rem;
+        margin-left: 3rem;
         font-size: 30px;
+ 
     }
+    
+      .navbar a {
+        font-size: 0.8rem;
+        padding: 20px 30px;
+        color: white;
+        font-weight: 500; 
+    }
+
 
     .logo { 
         font-family: 'Yeseva One', cursive;
        font-size: 48px;
-       margin-top: 0.5rem;
+       margin-bottom: -1rem;
         color: white;   
+        margin-left: -5rem;
     }
+
+
+}
+
 
   
-
-}
-
-@media(max-width: 1820px) {
-    main {
-        width: 100%;
-        max-width: 1600px;
-        padding-top: 1em;
-        margin-left: 5rem;
-        font-size: 30px;
-    }
-}
 
 @media(max-width: 1640px) {
 
     .navbar a {
-        font-size: 1.5rem;
-        padding-left: 40px;
-        
-    }
-
-    main {
-        width: 100%;
-        max-width: 1500px;
-        padding-top: 1em;
-        margin-left: 5rem;
-        font-size: 30px;
+        padding-left: 20px; 
+        padding: 10px 20px;
     }
 
     main p {
         font-size: 37px;
     }
+
+    
 
     .footer {
         background-color: #24262b;
@@ -349,10 +773,22 @@ main {
 @media(max-width: 1570px)  {
     main {
         width: 100%;
-        max-width: 1400px;
         padding-top: 1em;
         margin-left: 4.5rem;
         font-size: 35px;
+    }
+
+    main p {
+        font-size: 25px;
+    }
+
+    .answers-table {
+        width: 40%;
+    }
+
+
+    .signatures span {
+        font-size: 32px;
     }
 
     .footer {
@@ -361,6 +797,23 @@ main {
 }
 
 @media(max-width: 1460px) {
+
+
+    .navbar a {
+        font-size: 1rem;
+        padding: 10px 20px;
+        color: white;
+        font-weight: 500;
+        text-transform: uppercase;
+    }
+
+    .logo { 
+        font-family: 'Yeseva One', cursive;
+       font-size: 42px;
+       margin-bottom: -1rem;  
+        margin-left: 0.5rem;
+    }
+
     
     main {
         width: 100%;
@@ -380,10 +833,10 @@ main {
 
     main {
         width: 100%;
-        max-width: 1200px;
         padding-top: 1em;
         margin-left: 2rem;
         font-size: 35px;
+        max-width: 1200px;
     }
   
     
@@ -391,16 +844,29 @@ main {
 }
 
 @media (max-width: 1240px)  {
+
     main {
         width: 100%;
-        max-width: 1100px;
         padding-top: 1em;
         margin-left: 2rem;
-        font-size: 35px;
+        font-size: 25px;
+        max-width: 1100px;
+    }
+
+    h1 {
+        font-size: 40px;
     }
 
     main p {
-        font-size: 38px;
+        font-size: 20px;
+    }
+
+    td {
+        font-size: 20px;
+    }
+
+    .signatures span {
+        font-size: 22px;
     }
 
     .footer {
@@ -408,22 +874,35 @@ main {
     }
 }
 
+@media (max-width: 1300px) {
+    .navbar a {
+        font-size: 0.7rem;
+        padding: 10px 15px;
+    }
+
+}
+
 @media (max-width: 1120px) {
 
     main {
         width: 100%;
-        max-width: 950px;
         padding-top: 1em;
         margin-left: 1rem;
         font-size: 35px;
+        max-width: 950px;
+    }
+
+    .logo { 
+        font-family: 'Yeseva One', cursive;
+       font-size: 42px;
+       margin-bottom: 0rem;
+        margin-left: 2.5rem;
     }
 
 
-    .navbar a {
-        font-size: 17px;
-        padding-left: 0px; 
-        padding: 6px 20px;
-        width: 100px;
+
+    .answers-table {
+        width: 60%;
     }
 
     .footer {
@@ -435,10 +914,32 @@ main {
 @media (max-width: 950px)  {
     main {
         width: 100%;
-        max-width: 860px;
         padding-top: 1em;
         margin-left: 1rem;
         font-size: 35px;
+    }
+
+    td {
+        padding-left: 3em;
+    }
+    .fixed {
+        display: inline-block;
+        width: 200px; /* adjust this value as needed */
+        text-align: left;
+        font-size: 12px;
+    }
+
+ 
+    td span {
+        font-size: 14px;
+    }
+
+    .signatures span {
+        font-size: 14px;
+    }
+
+    .answers-table {
+        width: 80%;
     }
 
     .footer {
@@ -479,6 +980,11 @@ main {
              opacity: 0;
              padding-bottom: 26px;
          }
+
+         .buchen {
+            visibility: visible;
+           }
+
          
                 
          #menu-icon {
@@ -492,7 +998,7 @@ main {
 
         .logo {
             display: block;
-         margin-left: auto;
+         margin-left: 4rem;
          margin-right: auto;
            font-size: 40px;
         }
@@ -528,14 +1034,20 @@ main {
  
             main {
                 width: 100%;
-                max-width: 820px;
-                padding-top: 4em;
+                
+                padding-top: 2em;
                 margin-left: 1rem;
                 font-size: 35px;
             }
     
     
-          
+            .tank-container::before,
+            .tank-container::after,
+            .middle-line::before {
+                
+                height: 70px; 
+              
+            }
     
     .nav-active {
         transform: translateX(0%);
@@ -551,7 +1063,7 @@ main {
             opacity: 1;
             transform: translateX(0px);
         }
-    }
+    
 
  
 }
@@ -559,13 +1071,36 @@ main {
 
 @media(max-width: 820px) {
 
+
     main {
-        width: 100%;
-        max-width: 760px;
-        padding-top: 4em;
-        margin-left: 1rem;
-        font-size: 35px;
+    
+        font-size: 20px;
     }
+
+    h1 {
+        font-size: 30px;
+    }
+
+    main p {
+        font-size: 10px;
+    }
+
+    .title {
+        padding-right: 3em;
+    }
+    
+    .title2 {
+        padding-right: 1em;
+    }
+    
+    .title3 {
+        padding-right: 4em;
+    }
+    
+    .title4 {
+        padding-right: 2em;
+    }
+
 
     .footer {
         bottom: -1600;
@@ -600,6 +1135,9 @@ main {
 
 
 @media (max-width: 780px) {
+    
+    
+    
     .navbar {
         position: fixed;
         right: 0px;
@@ -610,7 +1148,7 @@ main {
         display: inline-block;
         text-align: center;
         vertical-align: middle;
-        line-height: 90px;
+        line-height: 30px;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
         z-index: 1000;
@@ -639,16 +1177,33 @@ main {
              padding: 15px 60px; 
             }
 
-            .logo {
+            .logo { 
+                font-family: 'Yeseva One', cursive;
+               margin-bottom: -0.5rem;
+                margin-left: 3.5rem;
                 font-size: 30px;
             }
+        
 
        
             main {
                 width: 100%;
-                max-width: 680px;
                 margin-left: 1rem;
                 font-size: 35px;
+                padding-top: 2em;
+            }
+
+            .fixed {
+                width: 180px;
+                font-size: 12px;
+            }
+        
+         td span {
+                font-size: 10px;
+            }
+
+            .answers-table {
+                width: 100%;
             }
 
             .footer {
@@ -658,16 +1213,33 @@ main {
             .nav-active {
                 transform: translateX(0%);
             }
+        }
     
 }
 
 @media (max-width: 670px) {
     main {
         width: 100%;
-        max-width: 610px;
         margin-left: 1rem;
         font-size: 35px;
     }
+
+    .tank-container::before,
+.tank-container::after,
+.middle-line::before {
+    
+    height: 50px; 
+  
+}
+
+.fixed {
+    width: 150px;
+    font-size: 7px;
+}
+
+td span {
+    font-size: 7px;
+}
 
     .footer {
         bottom: -2800;
@@ -679,7 +1251,6 @@ main {
 @media (max-width: 610px) {
     main {
         width: 100%;
-        max-width: 570px;
         margin-left: 1rem;
         font-size: 35px;
     }
@@ -689,6 +1260,37 @@ main {
 
 }
 
+@media only screen and (max-width: 600px) {
+    .fuel {
+        font-size: 14px;
+    }
+
+    .mietbeginn,
+    .abfahrt,
+    .tank,
+    .selection,
+    .signatures,
+    .line {
+        margin-bottom: 10px;
+    }
+
+   
+
+    b {
+        padding-right: 2em;
+    }
+
+    .signatures {
+        width: 100%;
+        
+    }
+
+    .signatures span {
+        flex-basis: auto; 
+        font-size: 7px;
+}
+
+}
 @media(max-width: 574px) {
     main {
         width: 100%;
@@ -696,6 +1298,13 @@ main {
         margin-left: 1rem;
         font-size: 35px;
     }
+
+
+    td {
+        font-size: 12px;
+        padding-left: 0em;
+    }
+
    
     .footer {
         bottom: -3200;
@@ -707,6 +1316,11 @@ main {
 
 @media (max-width: 520px) {
 
+    
+    .logo {
+       font-size: 22px;
+      }
+
     main {
         width: 100%;
         max-width: 470px;
@@ -716,7 +1330,7 @@ main {
 
 
     main p {
-        font-size: 16px;
+        font-size: 10px;
         line-height: 1.5;
     }
 
@@ -727,14 +1341,23 @@ main {
 }
 
 @media (max-width: 470px) {
-
-    .logo {
-       font-size: 22px;
+    #menu-icon {
+        top: 33%;
     }
 
-     main h1 {
-         font-size: 40px;
-     }
+     .fixed {
+        width: 120px;
+        font-size: 8px;
+    }
+
+ .para-last p {
+        white-space: normal;
+    }
+
+    
+    td span {
+        font-size: 10px;
+    }
 
 }
 
@@ -742,8 +1365,26 @@ main {
 
 @media (max-width: 420px) {
 
+    .logo {
+        font-size: 15px;
+        margin-bottom: -0.5rem;
+        margin-left:  1.5rem;
+       }
+
     main {
-        padding-top: 2.8em;
+        max-width: 430px;
+        margin-left: -1rem;
+        font-size: 35px;
+    
+    }
+
+    main h1 {
+        font-size: 20px;
+        padding-top: 2em;
+    }
+
+    main h2 {
+        font-size: 15px;
     }
 
     .footer {
@@ -752,18 +1393,37 @@ main {
 
 }
 
-@media (max-width: 400px) {
+@media (max-width: 415px) {
 
+   
     .logo {
-      font-size: 15px;
+      font-size: 14px;
+      padding-bottom: 0.5em;
+     
     }
+
+    .fixed {
+        width: 130px;
+        font-size: 9px;
+    }
+
+
+    
+    td span {
+        font-size: 9px;
+    }
+
+
   }
+
+
 
 @media (max-width: 380px)  {
   
     .logo {
-        font-size: 15px;
+        font-size: 12px;
      }
+
 
     .footer {
         bottom: -1500;
@@ -772,6 +1432,21 @@ main {
 
 
 @media (max-width: 360px)  {
+
+    .logo {
+        font-size: 10px;
+      }
+
+      .fixed {
+        width: 100px;
+        font-size: 6px;
+    }
+
+
+    
+    td span {
+        font-size: 6px;
+    }
   
 
     .footer {
@@ -784,4 +1459,3 @@ main {
       font-size: 12px;
    }
   }
-
