--- a/map.css
+++ b/map.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Maven+Pro:wght@400;500;700&family=UnifrakturMaguntia&display=swap');
 
+
+
 * {
     margin: 0;
     padding: 0;
@@ -22,6 +24,7 @@
 body {
     background-color:#f3f3f3 ;
 }
+
 
 html::-webkit-scrollbar {
     width: 0.5rem;
@@ -73,7 +76,7 @@ header {
    }
    
    .navbar a {
-       font-size: 1.6rem;
+       font-size: 1.2rem;
        padding: 20px 40px;
        color: white;
        font-weight: 700;
@@ -94,6 +97,11 @@ header {
    .navbar a:hover::after {
        width: 100%;
    }
+
+   .buchen {
+    visibility: hidden;
+   }
+
    
    #menu-icon {
        font-size: 24px;
@@ -343,6 +351,70 @@ iframe {
     background: var(--main-color);
 }
 
+.col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    max-width: 90%;
+    margin: 2rem auto;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    transition: all 0.3s ease-in-out;
+}
+
+
+.col:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+}
+
+.content-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.content-img, .content-text {
+    flex-basis: 45%;
+    padding: 2rem;
+}
+
+.content-img img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.content-text h2 {
+    margin-bottom: 0.5rem;
+    font-family: 'Josefin Sans', sans-serif; 
+    font-size: 2rem;
+    color: #185abc; /* Dark Blue Text */
+}
+
+.content-text h3 {
+    margin-bottom: 1rem;
+    font-family: 'Josefin Sans', sans-serif; 
+    font-size: 1.5rem;
+    color: #00897b; /* Teal Text */
+}
+
+.content-text p {
+    font-family: 'Josefin Sans', sans-serif; 
+    font-size: 1.125rem;
+    color: #000000;
+    line-height: 1.6;
+    margin: 1em 0;
+    text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
+}
+
+
 
 .container {
     max-width: 1170px;
@@ -461,8 +533,11 @@ b {
         color: white;   
     }
     
-    .navbar a {
-        font-size: 1rem;  
+      .navbar a {
+        font-size: 0.8rem;
+        padding: 20px 30px;
+        color: white;
+        font-weight: 500; 
     }
  
  
@@ -492,13 +567,6 @@ b {
  }
 
 
- .small-img-row {
-    margin-left: 9rem;
-    width: 84%;
-}
-
-
-
 
  }
 
@@ -507,7 +575,8 @@ b {
 
  
     .navbar a {
-        padding-left: 40px;  
+        padding-left: 20px; 
+        padding: 10px 20px;
     }
 
     
@@ -558,10 +627,6 @@ b {
         width: 100%;
      }
 
-     .small-img-row {
-        margin-left: 7rem;
-        width: 85%;
-    }
 
 }
 
@@ -571,11 +636,13 @@ b {
     padding-right: 6em;
     padding-left: 5em;
 }
-
-.small-img-row {
-    margin-left: 5rem;
-    width: 88%;
 }
+
+@media (max-width: 1300px) {
+    .navbar a {
+        font-size: 0.7rem;
+        padding: 10px 15px;
+    }
 
 }
 
@@ -583,17 +650,6 @@ b {
 
 @media (max-width: 1110px) {
 
-
-    .navbar a {
-        padding-left: 0px; 
-        padding: 6px 20px;
-        width: 100px;
-    }
-
-    .small-img-row {
-        margin-left: 3rem;
-        width: 87%;
-    }
 
     .project-title {
         font-size: 20px;
@@ -615,10 +671,6 @@ b {
         padding-left: 3em;
     }
 
-    .small-img-row {
-        width: 89%;
-    }
-    
 
 
      
@@ -656,6 +708,11 @@ b {
                  opacity: 0;
                  padding-bottom: 26px;
              }
+
+             .buchen {
+                visibility: visible;
+               }
+
              
              #menu-icon {
                 display: block;
@@ -667,7 +724,7 @@ b {
             }
             .logo {
                 display: block;
-             margin-left: auto;
+             margin-left: 4rem;
              margin-right: auto;
                font-size: 40px;
             }
@@ -779,6 +836,13 @@ b {
         
         
     }
+    
+    
+          .warning {
+   margin-top: 4rem;
+  }
+
+    
 
     section {
         padding: 20px 14px;
@@ -798,7 +862,7 @@ b {
         display: inline-block;
         text-align: center;
         vertical-align: middle;
-        line-height: 90px;
+        line-height: 30px;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
         z-index: 1000;
@@ -854,11 +918,12 @@ b {
             padding-top: 2em;
           }
 
-
-.small-img-row {
-    margin-left: 2rem;
-    width: 91%;
-}
+          .content-row {
+            flex-direction: column;
+        }
+        .content-img, .content-text {
+            flex-basis: 100%;
+        }
 
         }
         .nav-active {
@@ -882,12 +947,6 @@ b {
 
 @media (max-width: 600px)  {
 
-    .small-img-row {
-        width: 89%;
-        display: block;
-        padding: 12px;
-
-    }
 
     .project-title {
         padding-top: 12px;
@@ -912,11 +971,11 @@ b {
 
 @media (max-width: 480px)  {
     .logo {
-      font-size: 22px;
-   }
-   .small-img-row {
-    width: 85%;
-}
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 22px;
+       }
+
 
 .project-title {
     font-size: 16px;
@@ -929,14 +988,25 @@ b {
 
   }
 
+  @media (max-width: 413px) {
 
-
-  @media (max-width: 400px) {
-
+   
     .logo {
-      font-size: 15px;
+      font-size: 17px;
+      padding-bottom: 0.5em;
+     
     }
   }
+
+  @media (max-width: 395px) {
+
+    .logo {
+      font-size: 17px;
+      padding-bottom: 0em;
+    }
+  }
+
+
 
   @media (max-width: 390px)  {
  
