--- a/uber.css
+++ b/uber.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Maven+Pro:wght@400;500;700&family=UnifrakturMaguntia&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -78,6 +80,11 @@ header {
      z-index: 10001;
      display: none;  
  }
+ 
+  .buchen {
+    visibility: hidden;
+   }
+  
 
  .btn {
   background-color: var(--primary-color);
@@ -146,6 +153,7 @@ transition: var(--transition-2);
  
 .heading {
   text-align: center;
+  padding-top: 1em;
 }
 
 .heading span {
@@ -159,11 +167,14 @@ transition: var(--transition-2);
   color: black;
 }
 
+
 .menu-container, .menu-container2 {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px,auto));
-  grid-gap: 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(620px,auto));
+  grid-gap: 6.5rem;
   align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .box {
@@ -689,6 +700,18 @@ list-style: none;
      margin-top: 0.5rem;
       color: white;   
   }
+  
+    .navbar a {
+        font-size: 1.3rem;
+        padding: 20px 30px;
+        color: white;
+        font-weight: 500; 
+    }
+
+  .menu-container, .menu-container2 {
+    grid-template-columns: repeat(auto-fit, minmax(500px,auto));
+    grid-gap: 5.0rem;
+  }
 
 }
 
@@ -696,25 +719,47 @@ list-style: none;
 
 
   
-  .navbar a {
-      font-size: 1.5rem;
-      padding-left: 40px;
-      
+   .navbar a {
+        padding-left: 20px; 
+        padding: 10px 20px;
+    }
+    
+  .menu-container, .menu-container2 {
+    grid-template-columns: repeat(auto-fit, minmax(400px,auto));
+    grid-gap: 4.0rem;
   }
 
   
+}
+@media (max-width: 1280px) {
+
+
+  .menu-container, .menu-container2 {
+    grid-template-columns: repeat(auto-fit, minmax(300px,auto));
+    grid-gap: 3.0rem;
+  }
+
+  
+}
+
+@media (max-width: 1300px) {
+    .navbar a {
+        font-size: 1.1rem;
+        padding: 10px 15px;
+    }
+
 }
 
 
 
 @media (max-width: 1110px) {
 
-  .navbar a {
-      font-size: 17px;
-      padding-left: 0px; 
-      padding: 6px 20px;
-      width: 100px;
+
+  .menu-container, .menu-container2 {
+    grid-template-columns: repeat(auto-fit, minmax(200px,auto));
+    grid-gap: 2.0rem;
   }
+
 
 }
    
@@ -737,28 +782,22 @@ list-style: none;
           z-index: 1000;
            }
   
-           .navbar a {
-              float: none;
-              padding-left: 0px;
-              letter-spacing: 3px;
-              font-size: 10px;
-              font-weight: 900;
-              text-transform: uppercase;
-              margin-left: auto;
-              margin-right: auto;
-              position: relative;
-          }
+            .navbar a {
+                    float: none;
+                    padding-left: 0px;
+                    letter-spacing: 3px;
+                    font-size: 14px;
+                    font-weight: bold; 
+                }
+            
           
-           .kondi {
-              padding-right: 1.5em;
-              position: absolute;
-          }
+        
 
 
            .navbar li  {
               opacity: 0;
               padding-bottom: 26px;
-              padding-top: 26px;  
+    
            }
 
   
@@ -771,13 +810,18 @@ list-style: none;
               top: 2.7%;
               color: white;
           }
+          
+            .buchen {
+                    visibility: visible;
+                   }
 
-          .logo {
-              display: block;
-           margin-left: auto;
-           margin-right: auto;
-             font-size: 40px;
-          }
+
+                   .logo {
+                    display: block;
+                 margin-left: 10rem;
+                 margin-right: auto;
+                   font-size: 40px;
+                }
 
           .btn {
             visibility: hidden;
@@ -812,7 +856,7 @@ list-style: none;
       display: inline-block;
       text-align: center;
       vertical-align: middle;
-      line-height: 90px;
+      line-height: 30px;
       transform: translateX(100%);
       transition: transform 0.5s ease-in;
       z-index: 1000;
@@ -825,15 +869,6 @@ list-style: none;
        
   
   
-       .navbar li  {
-         
-          margin-left: 0rem;
-          opacity: 0;
-          padding-bottom: 26px;
-          padding-top: 26px;  
-       }
-  
-
        
        header {
   
@@ -852,12 +887,17 @@ list-style: none;
           
           .logo {
             font-size: 30px;
+            margin-left: 7rem;
         }
         
         .btn2 {
           margin-left: auto;
           margin-right: auto;
         }
+
+     
+      
+
         .about-content {
           position: relative;
         }
@@ -880,8 +920,10 @@ list-style: none;
 
   @media (max-width: 480px)  {
     .logo {
+      margin-left: auto;
+      margin-right: auto;
       font-size: 22px;
-   }
+     }
   }
 
   @media (max-width: 400px) {
@@ -992,4 +1034,5 @@ list-style: none;
     
 
           
+      
       
