--- a/formular.css
+++ b/formular.css
@@ -114,6 +114,41 @@ header {
      display: none;  
  }
 
+ .horizontal-menu {
+  display: none;
+  overflow-x: auto;
+  white-space: nowrap;
+  background-color:#848c8c;
+  padding: 5px 0;
+  position: fixed;
+  top: 60px; 
+  width: 100%;
+  z-index: 1000; 
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.menu-item {
+  display: inline-block;
+  padding: 10px 20px;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  text-decoration: none;
+  color: white;
+}
+
+.menu-item a {
+  color: white;
+  font-size: 13.5px;
+}
+
+.menu-item:not(:last-child) {
+  border-right: 1px solid #ccc;
+}
+
  .btn {
   background-color: var(--primary-color);
   color: white;
@@ -506,6 +541,15 @@ form {
   .btn {
     visibility: hidden;
   }
+
+  .horizontal-menu {
+    display: flex;
+
+}
+
+.menu-item {
+    text-decoration: none;
+}
 
    
      header {
