--- a/index.css
+++ b/index.css
@@ -84,13 +84,14 @@ header {
        color: white;
        font-weight: 700;
        text-transform: uppercase;
+       text-decoration: none
    }
    
    .navbar a::after {
        content: "";
        width: 0;
        height: 3px;
-       background: var(--gradient);
+       background: transparent;
        position: absolute;
        bottom: -13px;
        left: 0;
@@ -107,6 +108,41 @@ header {
        z-index: 10001;
        display: none;  
    }
+
+   .horizontal-menu {
+    display: none;
+    overflow-x: auto;
+    white-space: nowrap;
+    background-color:#848c8c;
+    padding: 5px 0;
+    position: fixed;
+    top: 60px; /* Visina headera, prilagodite po potrebi */
+    width: 100%;
+    z-index: 1000; /* Postavlja se iznad sadržaja ispod */
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+
+.menu-item {
+    display: inline-block;
+    padding: 8px 20px;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+    text-decoration: none;
+    color: white; 
+}
+
+.menu-item a {
+    color: white;
+    font-size: 13.5px;
+}
+
+.menu-item:not(:last-child) {
+    border-right: 1px solid #ccc;
+}
+
+
 
    .buchen {
     visibility: hidden;
@@ -718,9 +754,17 @@ ul {
               visibility: hidden;
             }
   
-        
+            .horizontal-menu {
+                display: flex;
+
+            }
+
+            .menu-item {
+                text-decoration: none;
+            }
            
              header {
+                
                  height: 60px;
                  width: 100%;
                  top: 0;
@@ -748,6 +792,7 @@ ul {
                 display: block;
                 text-align: center;   
                 padding-top: 8em;
+                margin-top: 120px;
             }
 
             .carousel {
@@ -841,6 +886,7 @@ ul {
 
      .navbar li {
          opacity: 0;
+    
      }
 
 
