--- a/formular.css
+++ b/formular.css
@@ -708,6 +708,20 @@ to{
         font-size: 12px;
        }
       }
+
+      @media (max-width: 430px)  {
+        .logo {
+          padding-bottom: 0.3em;
+       }
+
+      }
+
+      @media (max-width: 415px)  {
+        .logo {
+          padding-bottom: 0em;
+       }
+
+      }
     
       @media (max-width: 400px) {
     
