--- a/index.css
+++ b/index.css
@@ -1004,7 +1004,11 @@ ul {
 
   }
 
-  @media (max-width: 413px) {
+  @media (max-width: 430px) {
+
+    #menu-icon {
+        top: 30%;
+    }
 
    
     .logo {
@@ -1013,6 +1017,15 @@ ul {
      
     }
   }
+
+
+  @media (max-width: 415px) {
+
+    #menu-icon {
+        top: 35%;
+    }
+
+}
 
   @media (max-width: 395px) {
 
