--- a/preise.css
+++ b/preise.css
@@ -792,6 +792,20 @@ transition: var(--transition-2);
           font-size: 22px;
          }
       }
+
+      @media (max-width: 430px) {
+    
+        .logo {
+          padding-bottom: 0.3em;
+        }
+      }
+
+      @media (max-width: 415px) {
+    
+        .logo {
+          padding-bottom: 0em;
+        }
+      }
     
       @media (max-width: 400px) {
     
