--- a/uber.css
+++ b/uber.css
@@ -979,11 +979,41 @@ list-style: none;
      }
   }
 
+  
+  @media (max-width: 430px) {
+
+    #menu-icon {
+        top: 23%;
+    }
+
+    .logo {
+      padding-top:0.2em;
+     
+    }
+
+  }
+
+
+
   @media (max-width: 400px) {
 
     .logo {
       font-size: 15px;
     }
+  }
+
+  @media (max-width: 375px) {
+
+    #menu-icon {
+        top: 30%;
+    }
+
+    .logo {
+      padding-top:0.9em;
+     
+    }
+
+
   }
 
  
